2002-08-21  Keith Seitz  <keiths@redhat.com>

	* gdb-events.sh: Replace register_update with target-changed event.
	* gdb-events.c: Regenerated.
	* gdb-events.c: Regenerated.
	* valops.c (value_assign): Use target_changed_event instead
	of register_update_event and memory_changed.

2002-08-19  Keith Seitz  <keiths@redhat.com>

	* stack.c (select_frame_command): Send selected-frame-level-changed
	event notification, but only if the level actually changed.
	(up_silently_base): Add selected-frame-level-changed event
	notification.
	(down_silently_base): Likewise.
	(frame_command): Revert 2002-07-25 changes.
	(up_command): Likewise.
	(down_command): Likewise.

2002-08-13  Keith Seitz  <keiths@redhat.com>

	* interps.c (_initialize_interpreter): Remove ability to set
	the interpreter. This could really undermine MI clients.
	* top.c (catcher): Don't worry about interpreter changes.

2002-08-12  Keith Seitz  <keiths@redhat.com>

	* interps.c (_initialize_interpreter): Add completer function
	to "set interpreter" command.

2002-08-12  Keith Seitz  <keiths@redhat.com>

	* interps.c: Run through gdb_indent.sh
	* interps.h: Ditto.

2002-08-08  Keith Seitz  <keiths@redhat.com>

	* infrun.c (handle_inferior_event): Add context_changed_event.
	* gdb-events.sh (context_hook): Removed comment.
	(context_changed): Add new event.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.

2002-07-25  Keith Seitz  <keiths@redhat.com>

	* stack.c (frame_command): If the frame level changed, issue
	a selected_frame_level_changed event.
	(up_command): Add selected_frame_level_changed event;
	(down_command): Likewise.

	* gdb-events.sh: Add selected_frame_level_changed event.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.
	
	* stack.c (print_frame_info_base): Always set current_source_symtab
	and current_source_line.

	* cli/cli-interp.c (cli_interpreter_exec): Pass from_tty=1 to
	gdb_execute_command.

2002-07-22  Keith Seitz  <keiths@redhat.com>
